# pic_clouding

./: LargeNum.cpp  README.md
Markdown/: pic clouding
舞蹈机器人软件组考核/week1/: .makefile.swp  README.md  Ubuntu16.04安装流程报告.md
舞蹈机器人软件组考核/week1/add_sub(cmake)/: .main.cpp.swo  CMakeLists.txt
舞蹈机器人软件组考核/week1/add_sub(cmake)/src/: main.cpp
舞蹈机器人软件组考核/week1/add_sub(make)/: main.cpp  makefile  sub.cpp
舞蹈机器人软件组考核/week1/计算n天后的日期/: date.h
舞蹈机器人软件组考核/week2/: LargeNum  Week2.md
舞蹈机器人软件组考核/软件组考核-陈嘉艺-2018302334-第1周任务/: README.md
舞蹈机器人软件组考核/软件组考核-陈嘉艺-2018302334-第1周任务/add_sub(cmake)/src/: add.cpp  sub.cpp
舞蹈机器人软件组考核/软件组考核-陈嘉艺-2018302334-第1周任务/add_sub(make)/: add.cpp  add.h  add_sub  sub.h
舞蹈机器人软件组考核/软件组考核-陈嘉艺-2018302334-第1周任务/hello/: hello
舞蹈机器人软件组考核/软件组考核-陈嘉艺-2018302334-第1周任务/计算n天后的日期/: date.cpp
