#1.设置最低版本
CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

#2.设置工程名
PROJECT(add_sub)

#3.头文件目录
INCLUDE_DIRECTORIES(include)

#4.源文件目录
AUX_SOURCE_DIRECTORY(src DIR_SRCS)

#5.设置环境变量，放入编译用的所有源文件
SET(TEST_MATH ${DIR_SRCS})

#6.添加要编译的可执行文件
ADD_EXECUTABLE(${PROJECT_NAME} ${TEST_MATH})

#7.添加可执行文件所需要的库
TARGET_LINK_LIBRARIES(${PROJECT_NAME} m)
